# Universal-PDF-Retriever

./: .env.eample  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  test_db.py
src/: app.py  config.py  ingest.py
src/services/: ingestion.py  rag_engine.py  vector_store.py
tests/: test_services.py
